# python_scrapper_playwright

./: .gitignore  Dockerfile  Makefile  README.md  app.py  g2crowdurls.csv  input.csv  main.py  pyproject.toml  server.py
csv_reader/: csv_reader.py
scrapper/: scrappers.py  service.py
src/dtos/: dtos.py
src/entrypoints/controllers/: v1_scrapper.py
src/entrypoints/routers/: api_v1.py
src/services/scrapper/: scrappers.py  service.py
tests/: test_service.py
