[tool.poetry]
name = "scrapper_fastapi"
version = "0.1.0"
description = ""
authors = ["Gustavo Honorato Nicolau <46831966+Gushono@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
playwright = "^1.34.0"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
